src/components/pages/AboutUs/Team/team.scss
.testimonials_container {
    margin-block: 0 !important;
    padding-top: 100px !important;
    background: #050C0B !important;
    padding-bottom: 4px;

    @media screen and (max-width: 767px) {
      // margin-block: 120px;
    }
 }
 
 .about_carousel {
    margin-block: 3.5rem;
    padding: 0 120px;
    @media screen and (max-width: 767px) {
      padding:32px;
    }
 }
 
 .testimonial-card {
    border-radius: 16px;
    border: 1px solid rgba(255, 255, 255, 0.05);
    background: linear-gradient(
       180deg,
       rgba(255, 255, 255, 0) -17.2%,
       rgba(255, 255, 255, 0.07) 140.9%
    );
    backdrop-filter: blur(10px);

    padding: 2rem;
    text-align: center;
    margin-inline: 0.5rem;
    height: 252px;
    @media screen and (max-width: 767px) {
      width:294px;
    }
 
    * {
       margin: 0;
       padding: 0;
    }
 
    .image {
       max-width: 72px;
       aspect-ratio: 1 / 1;
       border-radius: 100%;
       margin-inline: auto;
    }
 
    .testimonial-person {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       gap: 0.8rem;
    }
 
    .rating {
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 2px;
 
       img {
          width: 1rem;
          aspect-ratio: 1 / 1;
       }
    }
 }
 
 @media screen and (max-width: 767px) {
    .testimonial-card {
       padding: 20px 10px;
       gap: 25px;
       text-align: center;
       margin: 0 2px;
       border-radius: 24px;
    }
    .partners_container .partner_content_container .heading {
       font-size: 12px;
    }
    .partners_container .partner_content_container .sub_title {
       font-size: 24px;
    }
    .partners_container {
       padding: 88px 32px;
    }
 }
 
 .testimonials_container {
    .owl-dots button.owl-dot {
       margin-top: 1.5rem;
 
       @media screen and (max-width: 768px) {
          margin-top: 0.5rem;
       }
 
       span {
          width: 0.7rem;
          height: 0.7rem;
          margin-inline: 4px;
          border-radius: 0;
          clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
          opacity: 0.5;
       }
    }
    .owl-dots button.owl-dot.active span {
       background: #e5be20;
       opacity: 1;
    }
    .owl-nav button {
      width: 40px;
      height: 40px;
      padding: 120px !important;
      border-radius: 100px !important;
      border: 1px solid #04121B !important;
      background: #101D24 !important;
      box-shadow: 0px 0px 250px 0px rgba(0, 0, 0, 0.20);
      backdrop-filter: blur(10px);
      margin: 0 !important;
      position: absolute;
      top: calc(50% - 35px);
   }
      .owl-nav button span {
      color: #F8F8F8;
      opacity: 0.7;
      font-size: 33px;
      line-height: 20px;
      }
      .owl-nav .owl-prev {
         left: -12px;
      }
      .owl-nav .owl-next {
         right: -12px;
      }
 }
 

